--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,22 @@
-theme: jekyll-theme-slate
+# Site settings
+name: My Personal Website
+email: 2417179763@sjtu.edu.cn
+author: Chenchen Zhao
+url: https://zcc31415926.github.io
+github: https://github.com/zcc31415926/
+baseurl: ""
+description:
+meta_description:
+motto:
+banner:
+
+#permalink: /:categories/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
+paginate: 10
+
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
+
+github_username: zcc31415926
+
+# Build settings
+markdown: kramdown
