--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-slate
-#kramdown:
-  #math_engine: null
 markdown: kramdown
 #markdown: maruku
+kramdown:
+  math_engine: katex
+  #math_engine: null
